CSS fix: normal overflow-wrap for code in responsive-table
Otherwise, they're wrapped way too aggressively.

--- a/app/frontend/css/components/_responsive_table.scss
+++ b/app/frontend/css/components/_responsive_table.scss
@@ -103,6 +103,10 @@
     }
   }
 
+  code {
+    overflow-wrap: normal;
+  }
+
   &--single-column-rows {
     tbody {
       tr {
